# taam

./: .gitignore  app.py  main.py  middleware.ts  next.config.ts  package-lock.json  package.json  pyproject.toml  qr_test.py  test.py  users.db
public/: sitemap.xml
public/examples/: menu_import_template.csv
src/: middleware.ts
src/app/: globals.css  layout.tsx
src/app/[subdomain]/: MenuPageClient.tsx  page.tsx
src/app/dashboard/: page.tsx
src/app/login/: page.tsx
src/app/mona/: page.tsx
src/app/showroom/: page.tsx
src/app/test/: page.tsx
src/components/: app-sidebar.tsx  login-form.tsx  nav-main.tsx  nav-user.tsx  password-input.tsx  sidebar-opt-in-form.tsx  team-switcher.tsx
src/components/admin/: admin-dashboard.tsx
src/components/dashboard/: AccountSettings.tsx  Currency.tsx  EditData.tsx  EditMenu.tsx  PaymentHistory.tsx  Subscription.tsx  Tariffs.tsx  ViewData.tsx
src/components/dashboard/analytics/: Statistics.tsx
src/components/dashboard/menu/: Categories.tsx  Integrations.tsx  MenuItems.tsx
src/components/menu/: Cart.tsx
src/components/ui/: field.tsx  scroll-area.tsx  tabs.tsx
src/hooks/: useCart.ts
src/lib/: api.ts  show-error-toast.ts  show-error-toast.tsx  utils.ts
src/services/: admin.service.ts  auth.service.ts  index.ts  menu.service.ts  order.service.ts  restaurant.service.ts  stats.service.ts  subscription.service.ts  user.service.ts
src/src/app/: layout.tsx  page.tsx
src/src/components/: login-form.tsx  nav-main.tsx  nav-projects.tsx  sidebar-opt-in-form.tsx  team-switcher.tsx
src/src/lib/: api.ts
(+13 files in other folders)
